Eevee enabled AO pass affects render result (even though AO is disabled in scene settings) #81761

Closed
opened 2020-10-16 11:10:37 +02:00 by Philipp Oeser · 6 comments
Member

System Information
Operating system: Linux-5.8.4-200.fc32.x86_64-x86_64-with-fedora-32-Thirty_Two 64 Bits
Graphics card: GeForce GTX 970M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 450.66

Blender Version
Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-10-16 05:34, hash: fa566157a5
Caused by 68651534c2

Short description of error
Eevee enabled AO pass affects render result (even though AO is disabled in scene settings)

Exact steps for others to reproduce the error
b90_ao_bug.blend

  • Open .blend

Viewport rendered
image.png

F12 render (AO pass enabled, AO disabled in scene settings)
image.png

F12 render (AO pass disabled, AO disabled in scene settings)
image.png

F12 render (AO pass enabled, AO enabled in scene settings)
image.png

**System Information** Operating system: Linux-5.8.4-200.fc32.x86_64-x86_64-with-fedora-32-Thirty_Two 64 Bits Graphics card: GeForce GTX 970M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 450.66 **Blender Version** Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-10-16 05:34, hash: `fa566157a5` Caused by 68651534c2 **Short description of error** Eevee enabled AO pass affects render result (even though AO is disabled in scene settings) **Exact steps for others to reproduce the error** [b90_ao_bug.blend](https://archive.blender.org/developer/F8998492/b90_ao_bug.blend) - Open .blend Viewport rendered ![image.png](https://archive.blender.org/developer/F8998474/image.png) F12 render (AO pass enabled, AO disabled in scene settings) ![image.png](https://archive.blender.org/developer/F8998481/image.png) F12 render (AO pass disabled, AO disabled in scene settings) ![image.png](https://archive.blender.org/developer/F8998483/image.png) F12 render (AO pass enabled, AO enabled in scene settings) ![image.png](https://archive.blender.org/developer/F8998485/image.png)
Author
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Author
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Author
Member

Added subscriber: @Jeroen-Bakker

Added subscriber: @Jeroen-Bakker
Author
Member

@Jeroen-Bakker: mind checking?

@Jeroen-Bakker: mind checking?
Dalai Felinto self-assigned this 2020-10-16 15:09:08 +02:00

This issue was referenced by d48d8b3456

This issue was referenced by d48d8b34567bd577d179099fc098879bf296289a

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#81761
No description provided.