Fix T81761: EEVEE enabled AO pass affects render result

This was a regression introduced on 68651534c263.