source/blender/draw/engines/eevee/eevee_occlusion.c
@@ -64,7 +64,9 @@ int EEVEE_occlusion_init(EEVEE_ViewLayerData *sldata, EEVEE_Data *vedata)
     common_data->ao_factor = scene_eval->eevee.gtao_factor;
     common_data->ao_quality = 1.0f - scene_eval->eevee.gtao_quality;
 
-    common_data->ao_settings = 1.0f; /* USE_AO */
+    if (scene_eval->eevee.flag & SCE_EEVEE_GTAO_ENABLED) {
+      common_data->ao_settings = 1.0f; /* USE_AO */
+    }
     if (scene_eval->eevee.flag & SCE_EEVEE_GTAO_BENT_NORMALS) {
       common_data->ao_settings += 2.0f; /* USE_BENT_NORMAL */
     }
